fix(paginator): Vertically align text in buttons correctly

--- a/modules/paginator/main/index.scss
+++ b/modules/paginator/main/index.scss
@@ -36,7 +36,7 @@
   box-sizing: border-box;
   height: 40px;
   width: 40px;
-  line-height: 40px;
+  line-height: 38px;
   vertical-align: middle;
   text-align: center;
   cursor: pointer;
